--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -5,5 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Note">
-
+    <include
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        layout="@menu/todo_details"
+        />
 </android.support.constraint.ConstraintLayout>
