--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,8 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:theme="@style/AppTheme.AppBarOverlay"
+        >
 
 
         <LinearLayout
@@ -18,15 +19,7 @@
             android:gravity="top|right"
             android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|top"
-                android:onClick="addNote"
-                android:text="Добавить"
-                app:layout_anchor="@+id/toolbar"
-                app:layout_anchorGravity="top|center" />
+
 
             <Button
                 android:id="@+id/exit"
@@ -37,23 +30,32 @@
                 android:text="Выход"
                 tools:layout_editor_absoluteX="281dp" />
 
+
         </LinearLayout>
 
     </android.support.design.widget.AppBarLayout>
 
     <include
+        layout="@menu/todo_list"
+        android:layout_width="100dp"
+        android:layout_height="50dp" />
+
+
+    <include
         android:id="@+id/toolbar"
         layout="@layout/content_main2"
         android:layout_width="match_parent"
-        android:layout_height="617dp" />
+        android:layout_height="617dp"
+        />
 
 
     <ListView
+        android:id="@+id/listViewRow"
         android:layout_width="wrap_content"
         android:layout_height="530dp"
+        android:layout_marginTop="50dp"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="51dp"
-        android:layout_marginTop="50dp"/>
+        tools:layout_editor_absoluteY="51dp" />
 
 
 </android.support.design.widget.CoordinatorLayout>
