--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,53 +9,27 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay"
-        >
+        android:theme="@style/AppTheme.AppBarOverlay">
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="top|right"
+            android:gravity="top"
             android:orientation="horizontal">
-
-
-
-            <Button
-                android:id="@+id/exit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|end"
-                android:onClick="Exit"
-                android:text="Выход"
-                tools:layout_editor_absoluteX="281dp" />
 
 
         </LinearLayout>
 
     </android.support.design.widget.AppBarLayout>
 
-    <include
-        layout="@menu/todo_list"
-        android:layout_width="100dp"
-        android:layout_height="50dp" />
-
-
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/content_main2"
-        android:layout_width="match_parent"
-        android:layout_height="617dp"
-        />
-
 
     <ListView
         android:id="@+id/listViewRow"
         android:layout_width="wrap_content"
-        android:layout_height="530dp"
-        android:layout_marginTop="50dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="51dp" />
+        android:layout_height="694dp"
+
+        app:layout_constraintEnd_toEndOf="parent" />
 
 
 </android.support.design.widget.CoordinatorLayout>
