--- a/app/src/main/res/menu/todo_details.xml
+++ b/app/src/main/res/menu/todo_details.xml
@@ -3,10 +3,14 @@
     <item
         android:id="@+id/back"
         android:title="@string/back"
-        app:showAsAction="always"></item>
+        app:showAsAction="always">
+
+    </item>
     <item
         android:id="@+id/save"
         android:title="@string/save"
-        app:showAsAction="always"></item>
+        app:showAsAction="always">
+
+    </item>
 
 </menu>
