--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,15 +12,6 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="top"
-            android:orientation="horizontal">
-
-
-        </LinearLayout>
-
     </android.support.design.widget.AppBarLayout>
 
 
@@ -31,5 +22,22 @@
 
         app:layout_constraintEnd_toEndOf="parent" />
 
+
+
+    <RelativeLayout
+        android:id="@+id/emptyView"
+        android:layout_width="match_parent"
+        android:layout_height="150dp" >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal"
+            android:paddingTop="50dp"
+            android:text="@string/empty_list"
+            android:textColor="@color/gray"
+            android:textSize="20sp"/>
+
+    </RelativeLayout>
 
 </android.support.design.widget.CoordinatorLayout>
