--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -6,14 +6,45 @@
     android:layout_height="match_parent"
     tools:context=".Note">
 
-    <EditText
-        android:id="@+id/textToDoDetails"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:scrollbars="vertical"
-        android:inputType="textMultiLine"
-        android:gravity="left|top"
-        android:textSize="20sp"
-        tools:layout_editor_absoluteX="4dp"
-        tools:layout_editor_absoluteY="4dp" />
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/textInputLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/textToDoDetails"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+
+                android:inputType="textMultiLine"
+                android:scrollbars="vertical"
+                android:textSize="20sp"
+                tools:layout_editor_absoluteX="4dp"
+                tools:layout_editor_absoluteY="4dp"
+                android:hint="@string/prompt_title"
+                />
+
+        </android.support.design.widget.TextInputLayout>
+
+            <EditText
+                android:id="@+id/note_text"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:ems="10"
+                android:gravity="left|top"
+                android:hint="@string/prompt_text"
+                android:inputType="textMultiLine"
+                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
+                tools:layout_editor_absoluteX="0dp" />
+
+        </LinearLayout>
+
+
 </RelativeLayout>
