--- a/app/src/main/res/menu/todo_details.xml
+++ b/app/src/main/res/menu/todo_details.xml
@@ -2,20 +2,27 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/back"
+        android:icon="?attr/homeAsUpIndicator"
         android:title="@string/back"
         app:showAsAction="always">
 
     </item>
     <item
+        android:id="@+id/gallery"
+        android:icon="@drawable/ic_menu_gallery"
+        android:title="@string/save"
+        app:showAsAction="always"></item>
+    <item
         android:id="@+id/delete"
+        android:icon="@android:drawable/ic_menu_delete"
         android:title="@string/delete"
         app:showAsAction="always">
 
     </item>
     <item
         android:id="@+id/save"
+        android:icon="@android:drawable/ic_menu_save"
         android:title="@string/save"
-        app:showAsAction="always">
-    </item>
+        app:showAsAction="always"></item>
 
 </menu>
