--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -13,7 +13,14 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-        <android.support.design.widget.TextInputLayout
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scaleType="fitStart"
+                tools:srcCompat="@tools:sample/avatars" />
+
+            <android.support.design.widget.TextInputLayout
             android:id="@+id/textInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
