--- a/app/src/main/res/menu/todo_list.xml
+++ b/app/src/main/res/menu/todo_list.xml
@@ -4,12 +4,13 @@
     <item
         android:id="@+id/add_task"
         android:title="@string/add_task">
-
+    </item>
+    <item
+        android:id="@+id/geolocation"
+        android:title="@string/geolocation">
     </item>
     <item
         android:id="@+id/exit"
-        android:title="@string/exit">
-
-    </item>
+        android:title="@string/exit"></item>
 </menu>
 
