--- a/app/src/main/res/menu/todo_details.xml
+++ b/app/src/main/res/menu/todo_details.xml
@@ -8,6 +8,28 @@
 
     </item>
     <item
+        android:id="@+id/access_item"
+        android:title="@string/access">
+
+        <menu>
+            <group android:checkableBehavior="single">
+                <item
+                    android:id="@+id/publicc"
+                    android:orderInCategory="100"
+                    android:title="@string/public_access"
+                    app:showAsAction="never" />
+                    <item
+                    android:id="@+id/privatee"
+                    android:orderInCategory="200"
+                    android:title="@string/private_access"
+                    app:showAsAction="never" />
+
+            </group>
+        </menu>
+    </item>
+
+
+    <item
         android:id="@+id/gallery"
         android:icon="@drawable/ic_menu_gallery"
         android:title="@string/save"
