--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -7,51 +7,54 @@
     tools:context=".Note">
 
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/imageView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:scaleType="fitStart"
-                tools:srcCompat="@tools:sample/avatars" />
+                android:orientation="vertical">
 
-            <android.support.design.widget.TextInputLayout
-            android:id="@+id/textInputLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:scaleType="fitStart"
+                    tools:srcCompat="@tools:sample/avatars" />
 
-            <EditText
-                android:id="@+id/textToDoDetails"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/textInputLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
-                android:inputType="textMultiLine"
-                android:scrollbars="vertical"
-                android:textSize="20sp"
-                tools:layout_editor_absoluteX="4dp"
-                tools:layout_editor_absoluteY="4dp"
-                android:hint="@string/prompt_title"
-                />
+                    <EditText
+                        android:id="@+id/textToDoDetails"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
 
-        </android.support.design.widget.TextInputLayout>
+                        android:hint="@string/prompt_title"
+                        android:inputType="textMultiLine"
+                        android:scrollbars="vertical"
+                        android:textSize="20sp"
+                        tools:layout_editor_absoluteX="4dp"
+                        tools:layout_editor_absoluteY="4dp" />
 
-            <EditText
-                android:id="@+id/note_text"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:ems="10"
-                android:gravity="left|top"
-                android:hint="@string/prompt_text"
-                android:inputType="textMultiLine"
-                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
-                tools:layout_editor_absoluteX="0dp" />
+                </android.support.design.widget.TextInputLayout>
 
-        </LinearLayout>
+                <EditText
+                    android:id="@+id/note_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:ems="10"
+                    android:gravity="left|top"
+                    android:hint="@string/prompt_text"
+                    android:inputType="textMultiLine"
+                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
+                    tools:layout_editor_absoluteX="0dp" />
+
+            </LinearLayout>
+    </ScrollView>
 
 
 </RelativeLayout>
