--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -12,48 +12,54 @@
         android:layout_height="match_parent">
 
         <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <VideoView
+                android:id="@+id/videoView"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:visibility="gone"/>
+
+            <ImageView
+                android:id="@+id/imageView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:scaleType="fitStart"
+                tools:srcCompat="@tools:sample/avatars" />
 
-                <ImageView
-                    android:id="@+id/imageView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:scaleType="fitStart"
-                    tools:srcCompat="@tools:sample/avatars" />
-
-                <android.support.design.widget.TextInputLayout
-                    android:id="@+id/textInputLayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <EditText
-                        android:id="@+id/textToDoDetails"
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-
-                        android:hint="@string/prompt_title"
-                        android:inputType="textMultiLine"
-                        android:scrollbars="vertical"
-                        android:textSize="20sp"
-                        tools:layout_editor_absoluteX="4dp"
-                        tools:layout_editor_absoluteY="4dp" />
-
-                </android.support.design.widget.TextInputLayout>
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/textInputLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/note_text"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:ems="10"
-                    android:gravity="left|top"
-                    android:hint="@string/prompt_text"
-                    android:inputType="textMultiLine"
-                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
-                    tools:layout_editor_absoluteX="0dp" />
+                    android:id="@+id/textToDoDetails"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
 
-            </LinearLayout>
+                    android:hint="@string/prompt_title"
+                    android:inputType="textMultiLine"
+                    android:scrollbars="vertical"
+                    android:textSize="20sp"
+                    tools:layout_editor_absoluteX="4dp"
+                    tools:layout_editor_absoluteY="4dp" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <EditText
+                android:id="@+id/note_text"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:ems="10"
+                android:gravity="left|top"
+                android:hint="@string/prompt_text"
+                android:inputType="textMultiLine"
+                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
+                tools:layout_editor_absoluteX="0dp" />
+
+        </LinearLayout>
     </ScrollView>
 
 
