--- a/app/src/main/res/layout/info_window.xml
+++ b/app/src/main/res/layout/info_window.xml
@@ -6,6 +6,13 @@
     android:orientation="vertical"
     android:background="@color/bg_color" >
 
+    <VideoView
+        android:id="@+id/videoView2"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
+        android:visibility="gone"/>
+
     <ImageView
         android:id="@+id/place_icon"
         android:layout_width="wrap_content"
