--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -16,18 +16,24 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <VideoView
-                android:id="@+id/videoView"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
+            <Gallery
+                android:id="@+id/gallery_note"
+                android:layout_width="fill_parent"
+                android:layout_height="80dp"
                 android:visibility="gone"/>
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/picture"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:scaleType="fitStart"
-                tools:srcCompat="@tools:sample/avatars" />
+                android:layout_height="350dp"
+                android:contentDescription="@string/picture"
+                android:visibility="gone"/>
+
+            <VideoView
+                android:id="@+id/videoView"
+                android:layout_width="match_parent"
+                android:layout_height="350dp"
+                android:visibility="gone"/>
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/textInputLayout"
