--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Note">
@@ -9,64 +9,223 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="30dp"
             android:orientation="vertical">
 
-            <Gallery
-                android:id="@+id/gallery_note"
-                android:layout_width="fill_parent"
-                android:layout_height="80dp"
-                android:visibility="gone"/>
-
-            <ImageView
-                android:id="@+id/picture"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="350dp"
-                android:contentDescription="@string/picture"
-                android:visibility="gone"/>
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
 
-            <VideoView
-                android:id="@+id/videoView"
-                android:layout_width="match_parent"
-                android:layout_height="350dp"
-                android:visibility="gone"/>
+                <TextView
+                    android:id="@+id/new_post"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:text="@string/new_post"
+                    android:textAppearance="@style/new_post" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="end"
+                        android:orientation="horizontal">
+
+                        <ImageButton
+
+                            android:id="@+id/lock"
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:layout_gravity="end"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginRight="15dp"
+                            android:background="#0000"
+                            android:onClick="onClickLock"
+                            android:src="@drawable/lock_open" />
+
+                        <ImageButton
+                            android:id="@+id/add_note"
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:layout_gravity="end"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginRight="15dp"
+                            android:background="#0000"
+                            android:onClick="onClickAddNote"
+                            android:src="@drawable/add_note" />
+                    </LinearLayout>
+
+
+                </LinearLayout>
+
+            </LinearLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/textInputLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:textColorHint="@color/gray">
 
                 <EditText
-                    android:id="@+id/textToDoDetails"
+
+                    android:id="@+id/textTitle"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
 
+                    android:backgroundTint="@color/gray"
                     android:hint="@string/prompt_title"
                     android:inputType="textMultiLine"
                     android:scrollbars="vertical"
+                    android:shadowColor="@color/gray"
+                    android:textColor="@color/gray"
+                    android:textColorHint="@color/gray"
                     android:textSize="20sp"
                     tools:layout_editor_absoluteX="4dp"
                     tools:layout_editor_absoluteY="4dp" />
 
             </android.support.design.widget.TextInputLayout>
 
-            <EditText
-                android:id="@+id/note_text"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/textInputLayoutDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:textColorHint="@color/gray">
+
+                <EditText
+                    android:id="@+id/textDescription"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/gray"
+                    android:hint="@string/prompt_text"
+                    android:inputType="textMultiLine"
+                    android:scrollbars="vertical"
+                    android:shadowColor="@color/gray"
+                    android:textColor="@color/gray"
+                    android:textColorHint="@color/gray"
+                    android:textSize="20dp"
+                    tools:layout_editor_absoluteX="4dp"
+                    tools:layout_editor_absoluteY="4dp" />
+            </android.support.design.widget.TextInputLayout>
+
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/textInputLayoutLocation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:textColorHint="@color/gray">
+
+                <EditText
+                    android:id="@+id/textLocation"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/gray"
+                    android:hint="@string/prompt_location"
+                    android:inputType="textMultiLine"
+                    android:scrollbars="vertical"
+                    android:shadowColor="@color/gray"
+                    android:textColor="@color/gray"
+                    android:textColorHint="@color/gray"
+                    android:textSize="20dp"
+                    tools:layout_editor_absoluteX="4dp"
+                    tools:layout_editor_absoluteY="4dp" />
+
+            </android.support.design.widget.TextInputLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:ems="10"
-                android:gravity="left|top"
-                android:hint="@string/prompt_text"
-                android:inputType="textMultiLine"
-                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
-                tools:layout_editor_absoluteX="0dp" />
+                android:gravity="end"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/add_media_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="10dp"
+                    android:text="@string/add_media"
+                    android:textAppearance="@style/new_post"
+                    android:textColor="@color/gray"/>
+
+                <ImageButton
+                    android:id="@+id/add_media"
+                    android:layout_width="20dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end|center"
+                    android:background="#0000"
+                    android:onClick="onClickAddMedia"
+                    app:srcCompat="@drawable/add_media" />
+            </LinearLayout>
+
+
+        </LinearLayout>
+            <TextView
+                android:id="@+id/number_of_video"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:text="@string/number_of_video"
+                android:textSize="15dp"
+                android:textAppearance="@style/new_post"
+                android:visibility="gone"
+                android:textColor="@color/gray"/>
+            <GridView
+                android:layout_marginTop="5dp"
+                android:id="@+id/gridViewForVideo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:columnWidth="90dp"
+                android:numColumns="auto_fit"
+                android:verticalSpacing="10dp"
+                android:horizontalSpacing="10dp"
+                android:stretchMode="columnWidth"
+                android:visibility="gone"
+                android:gravity="center">
+            </GridView>
+            <TextView
+                android:layout_marginTop="5dp"
+                android:id="@+id/number_of_photo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:text="@string/number_of_photo"
+                android:textSize="15dp"
+                android:textAppearance="@style/new_post"
+                android:visibility="gone"
+                android:textColor="@color/gray"/>
+            <GridView
+                android:layout_marginTop="5dp"
+                android:id="@+id/gridViewForPhoto"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:columnWidth="100dp"
+                android:numColumns="auto_fit"
+                android:verticalSpacing="10dp"
+                android:horizontalSpacing="10dp"
+                android:stretchMode="columnWidth"
+                android:visibility="gone"
+                android:gravity="center">
+            </GridView>
 
         </LinearLayout>
     </ScrollView>
 
 
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
