--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -4,7 +4,8 @@
     <item
         android:id="@+id/navigation_user"
         android:icon="@drawable/user"
-        android:title="@string/title_user" />
+        android:title="@string/title_user"
+        />
 
     <item
         android:id="@+id/navigation_map"
@@ -26,5 +27,4 @@
         android:id="@+id/navigation_settings"
         android:icon="@drawable/settings"
         android:title="@string/title_settings" />
-
 </menu>
