Добавил галерею фото и видео в заметку; кастомизировал кластер; сделал слой заметки прозрачным; добавил шаблон для просмотра одиночного маркера

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="white">#ffffff</color>
     <color name="windowBackground">#9F000000</color>
     <color name="chartreuse">#8CE676</color>
+    <color name="black">#000000</color>
+
 </resources>
