--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,6 +22,15 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="clusterText">
+        <item name="android:textSize">
+            15sp
+        </item>
+        <item name="android:textColor">
+            @color/colorPrimaryDark
+        </item>
+    </style>
+
     <style name="create_acco">
         <item name="android:textSize">
             15sp
