--- a/app/src/main/res/layout/activity_marker_preview.xml
+++ b/app/src/main/res/layout/activity_marker_preview.xml
@@ -46,10 +46,13 @@
                      android:layout_marginLeft="30dp"
                      />
                  <ImageButton
+                     android:id="@+id/fullView"
                      android:layout_width="20dp"
                      android:layout_height="fill_parent"
                      android:src="@drawable/fullscreen"
-                     android:layout_gravity="end"
+                     android:layout_marginTop="2dp"
+                     android:layout_marginRight="4dp"
+                     android:onClick="onClickFullView"
                      android:background="@color/white" />
              </TableRow>
 
@@ -110,9 +113,10 @@
                 <Gallery
                     android:id="@+id/gallery_preview"
                     android:layout_width="match_parent"
-                    android:layout_height="90dp"
+                    android:layout_height="100dp"
                     android:visibility="visible"
-                    android:background="@color/gray"/>
+                    android:layout_span="3"
+                    />
             </TableRow>
 
             <TableRow
