--- a/app/src/main/res/layout/activity_full_view_of_the_post.xml
+++ b/app/src/main/res/layout/activity_full_view_of_the_post.xml
@@ -78,10 +78,10 @@
                             android:layout_height="wrap_content"
                             android:layout_width="wrap_content"
                             android:src="@drawable/settings_post"
-                            android:layout_marginRight="-10dp"
-                            android:layout_marginLeft="8dp"
+                            android:layout_marginRight="-30dp"
+                            android:layout_marginLeft="10dp"
                             android:layout_gravity="center"
-                            android:background="@color/black"/>
+                            android:backgroundTint="#00000000"/>
                     </TableRow>
                 </TableLayout>
 
