--- a/app/src/main/res/layout/activity_marker_preview.xml
+++ b/app/src/main/res/layout/activity_marker_preview.xml
@@ -10,6 +10,7 @@
 
 
     <LinearLayout
+        android:id="@+id/screenPreview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal">
