--- a/app/src/main/res/layout/activity_setting_menu_for_full_view.xml
+++ b/app/src/main/res/layout/activity_setting_menu_for_full_view.xml
@@ -46,7 +46,7 @@
                 android:layout_marginTop="5dp">
                 <TableRow>
                     <TextView
-                        android:id="@+id/titleMarkerPreview"
+                        android:id="@+id/editPostFromTextMenu"
                         android:layout_width="fill_parent"
                         android:layout_height="fill_parent"
                         android:text="Edit post"
@@ -61,6 +61,7 @@
                 <TableRow
                     android:layout_marginTop="7dp">
                         <TextView
+                            android:id="@+id/deletePostFromTextMenu"
                             android:layout_span="2"
                             android:gravity="center"
                             android:layout_width="wrap_content"
