--- a/app/src/main/res/layout/activity_marker_preview.xml
+++ b/app/src/main/res/layout/activity_marker_preview.xml
@@ -111,13 +111,21 @@
                      />
              </TableRow>
             <TableRow>
-                <Gallery
-                    android:id="@+id/gallery_preview"
+
+                <HorizontalScrollView
+                    android:id="@+id/horizontal_scroll"
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:visibility="visible"
                     android:layout_span="3"
-                    />
+                    android:layout_height="wrap_content">
+
+                    <LinearLayout
+                        android:id="@+id/gallery_preview"
+                        android:layout_width="wrap_content"
+                        android:layout_height="100dp"
+                        android:orientation="horizontal" >
+                    </LinearLayout>
+
+                </HorizontalScrollView>
             </TableRow>
 
             <TableRow
