Добавил поиск локации по ключевым словам, немного почистил код от мусора

--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -142,7 +142,7 @@
                 android:layout_marginTop="10dp"
                 android:textColorHint="@color/gray">
 
-                <EditText
+                <AutoCompleteTextView
                     android:id="@+id/textLocation"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
