--- a/app/src/main/res/layout/activity_full_screen_photo.xml
+++ b/app/src/main/res/layout/activity_full_screen_photo.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".FullScreenPhoto">
+    tools:context=".FullScreenMediaDisplay.FullScreenPhoto">
 
         <android.support.v4.view.ViewPager
             android:id="@+id/view_pager"
