--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -72,8 +72,17 @@
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowAnimationStyle">@null</item>
-
         <item name="android:backgroundDimEnabled">false</item>
     </style>
+
+
+    <style name="FacebookLoginButton">
+        <item name="android:background">@drawable/facebook_img</item>
+    </style>
+
+    <style name="AppTheme.WithoutAnimation" parent="AppTheme">
+        <item name="android:windowAnimationStyle">@null</item>
+    </style>
+
 
 </resources>
